# performance_lab

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  benchmark_config.json  docker-compose.yml  performance_lab_plan.md  pyproject.toml  start.sh
.github/workflows/: benchmark.yml
backend/: apps.py  cli.py  config.py  git_ops.py  main.py  metrics.py  models.py  pipeline.py  regression.py  simulator.py
docs/: demo-scenario.md  grafana-setup.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppDashboard.tsx  AppSimulator.tsx  GrafanaDashboard.tsx  MetricSlider.tsx  RegressionTable.tsx  WorkflowControls.tsx
frontend/src/types/: index.ts
grafana/dashboards/: final-cut-dashboard.json  logic-pro-dashboard.json  xcode-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml  dashboards.yml  performance.json
grafana/provisioning/datasources/: influxdb.yml
mock_repo_templates/mock_final_cut/: benchmark_config.json  pyproject.toml  run_benchmarks.py
mock_repo_templates/mock_logic_pro/: benchmark_config.json  pyproject.toml
mock_repo_templates/mock_xcode/: benchmark_config.json  pyproject.toml  run_benchmarks.py
mock_repo_templates/mock_xcode/.github/workflows/: benchmark.yml
scripts/: clear_data.py  demo_config.json  generate_demo_config.py  run_demo.py
tests/: test_api.py  test_cli.py  test_git_ops.py  test_pipeline.py  test_regression.py  test_simulator.py
